--- a/sean-bio.html
+++ b/sean-bio.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="number">
                 <i class="fa fa-quote-left fa-sm"></i>
-                <p class="bio-quote">My parents were both born in South Africa and moved to the United States with $1,000 (10,000 Rand) in their pockets in 1988. From a very young age, my Dad ingrained the importance of saving and investing, and my interest in the market has grown ever since.<br>For me, there are a few layers of intrigue to financial markets - the competing forces of psychology and multivariate systems, the possibility to achieve greater returns than highly regarded professionals, and the profound impact of those results.</p>
+                <p class="bio-quote">My parents were both born in South Africa and moved to the United States with $1,000 (10,000 Rand) in their pockets in 1988. From a very young age, my Dad ingrained the importance of saving and investing, and my interest in the market has grown ever since. For me, there are a few layers of intrigue to financial markets - the competing forces of psychology and multivariate systems, the possibility to achieve greater returns than highly regarded professionals, and the profound impact of those results.</p>
                 <i class="fa fa-quote-right"></i>
             </div>
             <p class="bio-subtitle">BIOGRAPHY</p>
